--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   grid-auto-flow: dense;
   grid-gap: 10px;
 }
+
+@media (max-width: 991px) {
+  .container {
+    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+    grid-template-rows: minmax(auto, auto);
+  }
+}
