--- a/src/components/style.css
+++ b/src/components/style.css
@@ -20,21 +20,27 @@
 }
 
 .box:nth-child(1) {
-    grid-column: span 2;
-    grid-row: span 1;
+  grid-column: span 2;
+  grid-row: span 1;
 }
 
 .box:nth-child(2) {
-    grid-column: span 1;
-    grid-row: span 2;
+  grid-column: span 1;
+  grid-row: span 2;
 }
 
 .box:nth-child(4) {
-    grid-column: span 1;
-    grid-row: span 2;
+  grid-column: span 1;
+  grid-row: span 2;
 }
 
 .box:nth-child(5) {
-    grid-column: span 3;
-    grid-row: span 2;
+  grid-column: span 3;
+  grid-row: span 2;
+}
+@media (max-width: 991px) {
+  .box {
+    grid-column: unset !important;
+    grid-row: unset !important;
+  }
 }
